RESOLVED FIXED68615
[Gtk] Title attribute is not respected on option elements
https://bugs.webkit.org/show_bug.cgi?id=68615
Summary [Gtk] Title attribute is not respected on option elements
Deepak Sherveghar
Reported 2011-09-22 06:19:33 PDT
If I create an <option> element with title="option's title text" in a <select>, the tooltip will not be shown in GTK.
Attachments
HTML testcase attached. (416 bytes, text/html)
2011-09-22 06:20 PDT, Deepak Sherveghar
no flags
Patch. (2.39 KB, patch)
2011-09-22 06:29 PDT, Deepak Sherveghar
mrobinson: review-
Updated Patch (2.58 KB, patch)
2011-09-22 22:59 PDT, Deepak Sherveghar
no flags
Deepak Sherveghar
Comment 1 2011-09-22 06:20:50 PDT
Created attachment 108324 [details] HTML testcase attached.
Deepak Sherveghar
Comment 2 2011-09-22 06:29:15 PDT
Martin Robinson
Comment 3 2011-09-22 09:19:59 PDT
Comment on attachment 108326 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=108326&action=review Looks good to me, but I have a few ChangeLog nits below. > Source/WebCore/ChangeLog:3 > + [Gtk] Respect Title attribute on Option elements. This line should be the bug title: [Gtk] Title attribute is not respected on option elements > Source/WebCore/ChangeLog:8 > + Set Tooltip on menuitem widget created from GTKAction. Watch you capilization here. Probably better to say something like: Set tooltip on PopupMenuGtk items created from GtkActions. > Source/WebCore/ChangeLog:13 > + * platform/gtk/GtkPopupMenu.cpp: > + (WebCore::GtkPopupMenu::appendItem): > + * platform/gtk/PopupMenuGtk.cpp: > + (WebCore::PopupMenuGtk::createGtkActionForMenuItem): Please fill these out.
Deepak Sherveghar
Comment 4 2011-09-22 22:59:44 PDT
Created attachment 108443 [details] Updated Patch
WebKit Review Bot
Comment 5 2011-09-23 07:13:07 PDT
Comment on attachment 108443 [details] Updated Patch Clearing flags on attachment: 108443 Committed r95800: <http://trac.webkit.org/changeset/95800>
WebKit Review Bot
Comment 6 2011-09-23 07:13:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.