[Gtk] Title attribute is not respected on option elements. https://bugs.webkit.org/show_bug.cgi?id=68615

Patch by Deepak Sherveghar <bpwv64@motorola.com> on 2011-09-23
Reviewed by Martin Robinson.

Set tooltip on PopupMenuGtk items created from GtkActions.

* platform/gtk/GtkPopupMenu.cpp:
(WebCore::GtkPopupMenu::appendItem): Added a call to gtk_widget_set_tooltip_text()
    to set the tooltip on menuitem. Tooltip text is retrieved from GtkAction.
* platform/gtk/PopupMenuGtk.cpp:
(WebCore::PopupMenuGtk::createGtkActionForMenuItem): Pass the tooltip text
    from client when creating a GtkAction.

Canonical link: https://commits.webkit.org/84642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95800 268f45cc-cd09-0410-ab3c-d52691b4dbfc